--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span>
              <!-- <span class="year">HPXM2025</span> -->
         </div>
-        <div class="bottom-right"style="font-size:38px">
+        <!--div class="bottom-right"style="font-size:38px">
               Laboratori Nazionali di Frascati <br> TBD @ Frascati, Italy
-        </div>
+        </div-->
     </div>
 
     <table class="navigation">
