--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -74,6 +74,7 @@
         Damir Bosnar <i>(University of Zagreb, HR)</i><br>
         Silvia Cipiccia <i>(University College London, UK)</i><br>
         Andreas Knecht <i>(Paul Scherrer Institute, CH)</i><br>
+        Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br>
         Fabrizio Napolitano <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
         Shinji Okada <i>RIKEN Cluster for Pioneering Research, Wako JP</i><br>
         <!-- Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
@@ -82,7 +83,6 @@
         <!-- Sultan Dabagov <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
         <!-- Massimo Ferrario <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
         <!-- Carlo Fiorini <i>(Politecnico di Milano and INFN, IT)</i><br> -->
-        <!-- Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br> -->
         <!-- Andrea Zappettini <i>(Director of IMEM-CNR, IT)</i> <br> -->
         Manuel Sanchez del Rio <i>(European Synchrotron Radiation Facility, FR)</i><br>
         Magdalena Skurzok <i>(Jagiellonian University, PL)</i><br>
