update front text

--- a/index.html
+++ b/index.html
@@ -69,27 +69,16 @@
         <b>High Precision X-ray Measurements 2025</b> conference is the fourth edition of the HPXM conferences, held at the INFN Laboratories of <b>Frascati</b> in 2018, 2021, <a href="https://hpxm2023.github.io/">2023</a>.
     </p>
     <p>
-        In the wake of the success of the previous editions, HPXM2025 is planned with the twofold aim to consolidate the existing interconnections between the research teams and foster creating new ones, offering the opportunity for all the participants to discuss and share the results of their activities focusing on a common protagonist: <b>X-ray precision detection</b>.
+    In the wake of the success of the previous editions, HPXM2025 is planned with the twofold aim to <b>consolidate the existing interconnections</b> between the research teams and foster creating new ones, offering the opportunity for all the participants to <b>discuss and share</b> the results of their radiation-detection based activities, experiments and applications.
     </p>
-    <!-- <p><i>Daily Opening Lectures by Anna Kätker (Deutsches Röntgen Museum)</i>.</p> -->
-
-    <p>
-        The <b>scientific goal</b> of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their impacts in various sectors like nuclear physics, astrophysics, quantum physics, exotic atoms, medical physics, biology, cultural heritage and agrifood.
-
+    <p></p>
+    The <b>scientific goal</b> of this conference is to <b>unite the diverse communities</b>, like astrophysics, nuclear and atomic physics, material science, data analysis, simulations, detectors, electronics, optics, medicine, cultural heritage, food safety, fraud detection and others, to <b>accelerate scientific and technological advances in radiation detection and their applications</b>.
     </p>
- 
     <p>
-    <b>Main Topics</b> of the conference will be: X-ray energy and position detectors, optics, imaging and tracing simulations, spectrometers, graphite-based applications and chemical analysis, plasma emission spectroscopy, XRF, XES, EXAFS, PIXE, monochromators, synchrotron radiation, X-ray application using betatron radiation, large and tabletop X-ray facility, advanced statistical and machine learning methods, radioprotection, ultra-high dose rate dosimetry, telescopes and space engineering.
-    </p>    
-    <p>
-    <b>Best Young Researchers presentation award</b>:
-
-    A best presentation contest will take place to honor the most inspiring talks presented by Ph.D students during the conference. Winners, elected by a commission to be selected among the conference participants, will be awarded prizes provided by the MDPI sponsor.
+    <b>Main Topics</b> of the conference will be: energy and position radiation detectors, optics, imaging and raytracing simulations, spectrometers, graphite-based applications and chemical analysis, plasma emission spectroscopy, XRF, XES, EXAFS, PIXE, monochromators, synchrotron radiation, X-ray application using betatron radiation, large and tabletop facilities, advanced statistical and machine learning methods, radioprotection, ultra-high dose rate dosimetry, medical, agrifood and cultural heritage applications.
     </p>
-    
-
     <p>
-    <i> The conference is under the patronage of the "Italian Synchrotron Radiation Society" (SILS)</i>
+    <b>Young Researchers presentation award</b>: A best presentation contest will take place to honor the most inspiring talks presented by Ph.D. students and young researchers during the conference.
     </p>
     <h2>Conference Chairs</h2>
     <p>
