--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -73,6 +73,7 @@
         Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
         Damir Bosnar <i>(University of Zagreb, HR)</i><br>
         Silvia Cipiccia <i>(University College London, UK)</i><br>
+        Catalina Curceanu <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
         Andreas Knecht <i>(Paul Scherrer Institute, CH)</i><br>
         Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br>
         Fabrizio Napolitano <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
