--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     <p>
     In the wake of the success of the previous editions, HPXM2025 is planned with the twofold aim to <b>consolidate the existing interconnections</b> between the research teams and foster creating new ones, offering the opportunity for all the participants to <b>discuss and share</b> the results of their radiation-detection based activities, experiments and applications.
     </p>
+    <p><b><i>HPXM2025 will be also the first occasion to bring together the proponents of the ENRICH Cost Action, submitted for the 2024 call.</i></b></p>
     <p></p>
-    The <b>scientific goal</b> of this conference is to <b>unite the diverse communities</b>, like astrophysics, nuclear and atomic physics, material science, data analysis, simulations, detectors, electronics, optics, medicine, cultural heritage, food safety, fraud detection and others, to <b>accelerate scientific and technological advances in radiation detection and their applications</b>.
+    The scientific goal of this conference is to unite the diverse communities, like astrophysics, nuclear and atomic physics, material science, data analysis, simulations, detectors, electronics, optics, medicine, cultural heritage, food safety, fraud detection and others, to accelerate scientific and technological advances in radiation detection and their applications.
     </p>
     <p>
     <b>Main Topics</b> of the conference will be: energy and position radiation detectors, optics, imaging and raytracing simulations, spectrometers, graphite-based applications and chemical analysis, plasma emission spectroscopy, XRF, XES, EXAFS, PIXE, monochromators, synchrotron radiation, X-ray application using betatron radiation, large and tabletop facilities, advanced statistical and machine learning methods, radioprotection, ultra-high dose rate dosimetry, medical, agrifood and cultural heritage applications.
@@ -88,8 +89,6 @@
     </p>
 
 
-
-    
 
 
     <footer>
