--- a/registration/index.html
+++ b/registration/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" width="1000" alt="Frascati">
+        <img src="assets/banner.jpg" width="800" alt="Frascati">
         <div class="top-left">
             <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span>
             <!-- <span class="year">HPXM2025</span> -->
@@ -67,13 +67,13 @@
     <p>
         Registration can be done on the HPXM2025 
         <a href="https://agenda.infn.it/event/43727/registrations/">indico website</a>.<br><br>
-        <b>Registration opens: 03/03/25</b>
+        <b>Registration opens: 03/03/25</b><br>
         <b>Registration deadline: 12/05/25</b>
     </p>
     <h2>Call for abstract</h2>
     <p>
         It is possible to submit an abstract for a contribution <a href="https://agenda.infn.it/event/43727/abstracts/">here</a>. <br>
-        <b>Abstract submission opens: 03/03/25</b>
+        <b>Abstract submission opens: 03/03/25</b><br>
         <b>Abstract submission deadline: 04/05/25</b>
     </p>
 
@@ -81,8 +81,13 @@
 
 
     <p>To register an INFN Indico Account is required. If you do not have one, please create your account by following the link <strong>"External Users"</strong> available in the prompt window that appears when you start the registration process.</p>
-    
-    <h3>Conference Fee and Deadlines</h3>
+    <p>
+        All the infos on the conference fee and how to pay can be found on the HPXM2025 
+        <a href="https://agenda.infn.it/event/43727/registrations/">indico website</a>.<br><br>
+    </p>
+
+    <!--     
+    <h4>Deadlines</h4>
     <ul>
         <li><strong>Early fee:</strong> €200,00; <strong>Deadline:</strong> 15/04/2025</li>
         <li><strong>Regular fee:</strong> €250,00; <strong>Deadline:</strong> 15/05/2025</li>
@@ -141,7 +146,7 @@
     <p>The registration fee of INFN participants will be paid through an internal transfer among INFN sites. Other forms of payment will not be accepted. Further information can be obtained from the local INFN administrative offices.</p>
     
     <h3>Cancellation and Refunds</h3>
-    <p>All refund requests must be in writing by mail to the Conference Organisers as soon as possible. The Conference committee reserves the right to refuse reimbursement of part or all of the fee in the case of late cancellation. However, each case of cancellation will be considered individually.</p>
+    <p>All refund requests must be in writing by mail to the Conference Organisers as soon as possible. The Conference committee reserves the right to refuse reimbursement of part or all of the fee in the case of late cancellation. However, each case of cancellation will be considered individually.</p> -->
 
 <!-- 
 <p>The fee must be paid in Euro (&euro;) to the Istituto Nazionale di Fisica Nucleare - Laboratori Nazionali di Frascati by bank transfer or credit card (and by &quot;storno&quot;, for INFN participants only).</p>
