--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" width="1000" alt="Frascati">
+        <img src="assets/banner.jpg" width="800" alt="Frascati">
         <div class="top-left">
             <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span> 
             <!-- <span class="year">HPXM2025</span> -->
@@ -79,8 +79,10 @@
         <!-- <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li> -->
         <!-- <li>&bull; <a href="https://www.lazioinnova.it">Regione Lazio - Lazio Innova</a></li> -->
 	<!-- <li>&bull; <a href="http://www.strong-2020.eu/">STRONG2020</a></li> -->
-        <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li>
-        <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li>
+        <!-- <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li> -->
+        <!-- <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li> -->
+        <li>&bull; <a href="https://www.unizg.hr/">University of Zagreb</a></li>
+        <li>&bull; <a href="https://www.ukri.org/">UK Research and Innovation</a></li>
     </ul>
     </p>
 
@@ -91,44 +93,21 @@
                 <a href="https://www.caen.it/"><img src="assets/logo-2-caen.png" style="background: red">
             </td>
             <td class="sponsor" >
-                <!-- <a href="https://www.dectris.com"><img src="assets/DectrisLogo.png" style=" width:100%"></a> -->
-            </td>
-            <td class="sponsor" >
                 <a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
-            </td>
-
-        </tr>
-        <tr>
-            <td class="sponsor">
-               <!-- <a href="https://www.mdpi.com/"> <img src="assets/mdpi_logo.png" alt="MDPI" style="width: 100%"> </a> -->
             </td>
             <td class="sponsor" >
                 <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:100%"></a>
             </td>
-            <td class="sponsor" >
-                <a href="https://www.lucedisincrotrone.it/en/homepage/"><img src="assets/cropped-logo_SILS-180x82.png"></a>
-            </td>
         </tr>
         <tr>
             <td class="sponsor">
-                <!-- <a href=""><img src="assets/mitiqo.png"></a> -->
-            </td> 
-            <td class="sponsor">
-                <!-- <a href="https://www.lazioinnova.it"><img src="assets/lazioinnova.jpg"></a> -->
+               <a href=https://www.unizg.hr""> <img src="assets/unizgr.png" style="width: 100%"> </a>
             </td>
             <td class="sponsor" >
-                <!-- <a href="http://www.strong-2020.eu/"><img src="assets/logostrong.png" style="background: black"></a> -->
+                <a href="https://www.ukri.org/"><img src="assets/ukri_logo.png"></a>
             </td>
         </tr>
-        <tr>
-
-            <td class="sponsor" >
-                <a href="https://www.tesfluid.com/"><img src="assets/logo-tesfluid-300.png"></a>
-            </td>
-            <td class="sponsor" >
-                <a href="https://www.unipa.it/dipartimenti/difc"><img src="assets/unipa_default.jpg" style=" width:100%"></a>
-            </td>
-        </tr>
+        
     </table>
 
     <footer>
