--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </tr>
     </table>
     <figure style="float: left;margin: 20px">
-    <img src="assets/Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg" style="width: 400px;float: left;margin: 20px" >
-    <figcaption style="text-align: center"><a href="https://commons.wikimedia.org/wiki/File:Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg">From Wikimedia</a></figcaption>
+    <img src="assets/wrc.png" style="width: 400px;float: left;margin: 20px" >
+    <!-- <figcaption style="text-align: center"><a href="https://commons.wikimedia.org/wiki/File:Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg">From Wikimedia</a></figcaption> -->
     </figure>
     <p>
         <b>High Precision X-ray Measurements 2025</b> conference is the fourth edition of the HPXM conferences, held at the INFN Laboratories of <b>Frascati</b> in 2018, 2021, <a href="https://hpxm2023.github.io/">2023</a>.
