--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </tr>
     </table>
     <figure style="float: left;margin: 20px">
-    <img src="assets/wrc.png" style="width: 400px;float: left;margin: 20px" >
+    <img src="assets/wcr.png" style="width: 400px;float: left;margin: 20px" >
     <!-- <figcaption style="text-align: center"><a href="https://commons.wikimedia.org/wiki/File:Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg">From Wikimedia</a></figcaption> -->
     </figure>
     <p>
