--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- <figcaption style="text-align: center"><a href="https://commons.wikimedia.org/wiki/File:Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg">From Wikimedia</a></figcaption> -->
     </figure>
     <p>
-        <b>High Precision X-ray Measurements 2025</b> conference is the fourth edition of the HPXM conferences, held at the INFN Laboratories of <b>Frascati</b> in 2018, 2021, <a href="https://hpxm2023.github.io/">2023</a>.
+        <b>High Precision X-ray Measurements 2025</b> conference is the fourth edition of the HPXM conferences, held at the INFN Laboratories of <b>Frascati</b> in <a href="https://agenda.infn.it/event/15605/overview">2018</a> <a href="https://agenda.infn.it/event/22007/">2021</a>, <a href="https://hpxm2023.github.io/">2023</a>.
     </p>
     <p>
     In the wake of the success of the previous editions, HPXM2025 is planned with the twofold aim to <b>consolidate the existing interconnections</b> between the research teams and foster creating new ones, offering the opportunity for all the participants to <b>discuss and share</b> the results of their radiation-detection based activities, experiments and applications.
