--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" width="800" alt="Frascati">
+        <img src="assets/banner.jpg" class="banner-image" width="800" alt="Frascati">
         <div class="top-left">
             <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span>
              <!-- <span class="year">HPXM2025</span> -->
@@ -72,7 +72,7 @@
     In the wake of the success of the previous editions, HPXM2025 is planned with the twofold aim to <b>consolidate the existing interconnections</b> between the research teams and foster creating new ones, offering the opportunity for all the participants to <b>discuss and share</b> the results of their radiation-detection based activities, experiments and applications.
     </p>
     <p><b><i>HPXM2025 will be also the first occasion to bring together the proponents of the ENRICH Cost Action, submitted for the 2024 call.</i></b></p>
-    <p></p>
+    <p>
     The scientific goal of this conference is to unite the diverse communities, like astrophysics, nuclear and atomic physics, material science, data analysis, simulations, detectors, electronics, optics, medicine, cultural heritage, food safety, fraud detection and others, to accelerate scientific and technological advances in radiation detection and their applications.
     </p>
     <p>
