--- a/program/index.html
+++ b/program/index.html
@@ -18,14 +18,10 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" width="800" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span> 
-            <!-- <span class="year">HPXM2025</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span>
         </div>
-        <div class="bottom-right" style="font-size:38px">
-
-        </div>
+        <img src="assets/banner.jpg" class="banner-image" width="800" alt="Frascati">
     </div>
 
         <table class="navigation">
