--- a/registration/index.html
+++ b/registration/index.html
@@ -15,14 +15,10 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" width="800" alt="Frascati">
         <div class="top-left">
             <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span>
-            <!-- <span class="year">HPXM2025</span> -->
         </div>
-        <div class="bottom-right" style="font-size:38px">
-              <!-- Laboratori Nazionali di Frascati <br> 9-13 June 2025 @ Frascati, Italy -->
-        </div>
+        <img src="assets/banner.jpg" class="banner-image" width="800" alt="Frascati">
     </div>
 
         <table class="navigation">
