--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <b>Main Topics</b> of the conference will be: energy and position radiation detectors, optics, imaging and raytracing simulations, spectrometers, graphite-based applications and chemical analysis, plasma emission spectroscopy, XRF, XES, EXAFS, PIXE, monochromators, synchrotron radiation, X-ray application using betatron radiation, large and tabletop facilities, advanced statistical and machine learning methods, radioprotection, ultra-high dose rate dosimetry, medical, agrifood and cultural heritage applications.
     </p>
     <p>
-    <b>Young Researchers presentation award</b>: A best presentation contest will take place to honor the most inspiring talks presented by Ph.D. students and young researchers during the conference.
+    <b>Young Researchers presentation award</b>: A best presentation contest will take place to honor the most inspiring talks presented by Ph.D. students and young researchers during the conference. <a href="https://www.alkimie.it/">Alkimie</a> supports the contest and provides prizes for the winners.
     </p>
     <h2>Conference Chairs</h2>
     <p>
