--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -66,6 +66,7 @@
 <p>    The conference is financially supported by:</p>
     <p>
     <ul style="list-style-type:disc; color: black">
+        <li>&bull; <a href="https://www.alkimie.it//">Alkimie</a></li>
         <li>&bull; <a href="https://www.caen.it/">CAEN S.p.a</a></li>
         <!-- <li>&bull; <a href="https://www.dectris.com/">Dectris</a></li> -->
 	<li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
@@ -85,17 +86,20 @@
 
     <table class="sponsors">
         <tr>
+	    <td class="sponsor" >
+                <a href="https://www.alkimie.it/"><img src="assets/alikimie.png" style="width:100%"></a>
+            </td>
             <td class="sponsor" >
                 <a href="https://www.caen.it/"><img src="assets/logo-2-caen.png" style="background: red">
             </td>
             <td class="sponsor" >
                 <a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
             </td>
-            <td class="sponsor" >
-                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:100%"></a>
-            </td>
         </tr>
         <tr>
+	    <td class="sponsor" >
+                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:100%"></a>
+            </td>
             <td class="sponsor">
                <a href=https://www.unizg.hr""> <img src="assets/unizgr.png" style="width: 100%"> </a>
             </td>
