--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -87,7 +87,7 @@
     <table class="sponsors">
         <tr>
 	    <td class="sponsor" >
-                <a href="https://www.alkimie.it/"><img src="assets/alikimie.png" style="width:100%"></a>
+                <a href="https://www.alkimie.it/"><img src="assets/alkimie.png" style="width:100%"></a>
             </td>
             <td class="sponsor" >
                 <a href="https://www.caen.it/"><img src="assets/logo-2-caen.png" style="background: red">
