--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -73,7 +73,7 @@
         Andreas Knecht <i>(Paul Scherrer Institute, CH)</i><br>
         Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br>
         Fabrizio Napolitano <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Shinji Okada <i>RIKEN Cluster for Pioneering Research, Wako JP</i><br>
+        Shinji Okada <i>(Chubu University, JP)</i><br>
         <!-- Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
         <!-- Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br> -->
         <!-- Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br> -->
