--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -89,8 +89,8 @@
 <h2>Local Organizing Committee (LOC)</h2>
     <p>
         <!-- Simone Manti <br> -->
-        Francesco Artibani
-        Francesco Clozza
+        Francesco Artibani <br>
+        Francesco Clozza <br>
         Luca de Paolis <br>
         Francesco Sgaramella <br>
         A. Tamborrino Orsini (secretariat) <br>
