--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -69,16 +69,19 @@
         <li>&bull; <a href="https://www.alkimie.it//">Alkimie</a></li>
         <li>&bull; <a href="https://www.caen.it/">CAEN S.p.a</a></li>
         <!-- <li>&bull; <a href="https://www.dectris.com/">Dectris</a></li> -->
+	<li>&bull; <a href="https://it.farnell.com">Farnell</a></li>
 	<li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
         <!-- <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li> -->
         <!-- <li>&bull; <a href="">MITIQO project</a></li> -->
         <li>&bull; <a href="http://www.optigraph.eu/">Optigraph GmbH</a></li>
+	<li>&bull; <a href="https://www.oxinst.com/">Oxford Instruments</a></li>
         <!-- <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li> -->
         <!-- <li>&bull; <a href="https://www.lazioinnova.it">Regione Lazio - Lazio Innova</a></li> -->
+	<li>&bull; <a href="https://www.ni.com/">National Instruments</a></li>
 	<!-- <li>&bull; <a href="http://www.strong-2020.eu/">STRONG2020</a></li> -->
-        <!-- <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li> -->
+        <li>&bull; <a href="https://www.teessrl.it/">T.E.E.S.</a></li>
         <!-- <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li> -->
-        <li>&bull; <a href="https://www.unizg.hr/">University of Zagreb</a></li>
+        <!-- li>&bull; <a href="https://www.unizg.hr/">University of Zagreb</a></li -->
         <li>&bull; <a href="https://www.ukri.org/">UK Research and Innovation</a></li>
     </ul>
     </p>
