--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -96,15 +96,27 @@
                 <a href="https://www.caen.it/"><img src="assets/logo-2-caen.png" style="background: red">
             </td>
             <td class="sponsor" >
-                <a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
+                <a href="https://it.farnell.com"><img src="assets/Farnell.png" style="width: 150px"></a>
             </td>
         </tr>
         <tr>
 	    <td class="sponsor" >
-                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:100%"></a>
+		<a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
             </td>
             <td class="sponsor">
-               <a href=https://www.unizg.hr""> <img src="assets/unizgr.png" style="width: 100%"> </a>
+               <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:100%"></a>
+            </td>
+            <td class="sponsor" >
+		<a href="https://www.oxinst.com/"><img src="assets/OI.png" style="background: black; width:100%"></a>
+            </td>
+        </tr>
+
+	<tr>
+	    <td class="sponsor" >
+                <a href="https://www.ni.com/"><img src="assets/NI.png" style="background: black; width:100%"></a>
+            </td>
+            <td class="sponsor">
+               <a href=https://www.teessrl.it/""> <img src="assets/TEES.jpg" style="width: 100%"> </a>
             </td>
             <td class="sponsor" >
                 <a href="https://www.ukri.org/"><img src="assets/ukri_logo.png"></a>
