--- a/program/index.html
+++ b/program/index.html
@@ -63,7 +63,7 @@
 
     <h2>Conference Program, TBA</h2>
     <p>The program is available on the conference website
-        <a href="https://agenda.infn.it/event/43727/">https://agenda.infn.it/event/43727/</a>
+        <a href="https://agenda.infn.it/event/43727/timetable/">https://agenda.infn.it/event/43727/timetable/</a>
     </p>
     <iframe class="programme" src="https://agenda.infn.it/event/43727/timetable/?view=standard"></iframe>
 
