--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -63,29 +63,19 @@
  -->
  <h2>Sponsors</h2>
 
-<p>    The conference is financially supported by:</p>
-    <p>
-    <ul style="list-style-type:disc; color: black">
-        <li>&bull; <a href="https://www.alkimie.it//">Alkimie</a></li>
-        <li>&bull; <a href="https://www.caen.it/">CAEN S.p.a</a></li>
-        <!-- <li>&bull; <a href="https://www.dectris.com/">Dectris</a></li> -->
-	<li>&bull; <a href="https://it.farnell.com">Farnell</a></li>
-	<li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
-        <!-- <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li> -->
-        <!-- <li>&bull; <a href="">MITIQO project</a></li> -->
-        <li>&bull; <a href="http://www.optigraph.eu/">Optigraph GmbH</a></li>
-	<li>&bull; <a href="https://www.oxinst.com/">Oxford Instruments</a></li>
-        <!-- <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li> -->
-        <!-- <li>&bull; <a href="https://www.lazioinnova.it">Regione Lazio - Lazio Innova</a></li> -->
-	<li>&bull; <a href="https://www.ni.com/">National Instruments</a></li>
-	<!-- <li>&bull; <a href="http://www.strong-2020.eu/">STRONG2020</a></li> -->
-        <li>&bull; <a href="https://www.teessrl.it/">T.E.E.S.</a></li>
-        <!-- <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li> -->
-        <!-- li>&bull; <a href="https://www.unizg.hr/">University of Zagreb</a></li -->
-        <li>&bull; <a href="https://www.ukri.org/">UK Research and Innovation</a></li>
-    </ul>
-    </p>
-
+    <table class="sponsors">
+        <tr>
+	    <td class="sponsor" >
+		<a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
+            </td>
+            <td class="sponsor" >
+                <a href="https://www.ukri.org/"><img src="assets/ukri_logo.png"></a>
+            </td>
+            <td class="sponsor">
+               <a href=https://www.unizg.hr""> <img src="assets/unizgr.png" style="width: 100%"> </a>
+            </td>
+        </tr>     
+    </table>
 
     <table class="sponsors">
         <tr>
@@ -95,31 +85,24 @@
             <td class="sponsor" >
                 <a href="https://www.caen.it/"><img src="assets/logo-2-caen.png" style="background: red">
             </td>
-            <td class="sponsor" >
-                <a href="https://it.farnell.com"><img src="assets/Farnell.png" style="width: 150px"></a>
-            </td>
         </tr>
         <tr>
-	    <td class="sponsor" >
-		<a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
+            <td class="sponsor" >
+                <a href="https://it.farnell.com"><img src="assets/Farnell.png" style="width: 150px"></a>
             </td>
             <td class="sponsor">
                <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:100%"></a>
             </td>
+        </tr>
+	<tr>
             <td class="sponsor" >
 		<a href="https://www.oxinst.com/"><img src="assets/OI.png" style="background: black; width:100%"></a>
             </td>
-        </tr>
-
-	<tr>
 	    <td class="sponsor" >
                 <a href="https://www.ni.com/"><img src="assets/NI.png" style="background: black; width:100%"></a>
             </td>
             <td class="sponsor">
                <a href=https://www.teessrl.it/""> <img src="assets/TEES.jpg" style="width: 100%"> </a>
-            </td>
-            <td class="sponsor" >
-                <a href="https://www.ukri.org/"><img src="assets/ukri_logo.png"></a>
             </td>
         </tr>
         
