--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <td class="navigation">
                 <a title="SOC&LOC" href="socandloc">SOC&LOC</a>
             </td>
-            <td class="navigation">
+            <!-- <td class="navigation">
                 <a title="Deadlines" href="deadlines">Deadlines</a>
-            </td>
+            </td> -->
         </tr>
     </table>
     <figure style="float: left;margin: 20px">
